--- a/ClientApp/app/components/navmenu/navmenu.component.css
+++ b/ClientApp/app/components/navmenu/navmenu.component.css
@@ -37,6 +37,9 @@ li.link-active a:focus {
         border-top: 1px solid #444;
         padding: 0px;
     }
+    .navbar-inverse {
+        width: 80%;
+    }
     .navbar ul {
         float: none;
     }
