--- a/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/ClientApp/app/components/navmenu/navmenu.component.html
@@ -7,7 +7,7 @@
                 <span class='icon-bar'></span>
                 <span class='icon-bar'></span>
             </button>
-            <a class='navbar-brand' [routerLink]="['/search']">DojOverflow</a>
+            <a class='navbar-brand' [routerLink]="['/search/questions']">DojOverflow</a>
         </div>
         <div class='clearfix'></div>
         <div class='navbar-collapse collapse'>
@@ -23,7 +23,7 @@
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/search']">
+                    <a [routerLink]="['/search/questions']">
                         <span class='glyphicon glyphicon-search'></span> Search
                     </a>
                 </li>
