--- a/ClientApp/app/components/search/search.component.html
+++ b/ClientApp/app/components/search/search.component.html
@@ -1,15 +1,1 @@
-<h1>Ask a Question</h1>
-
-<form (submit)="addQuestion()" #questionForm="ngForm">
-    <textarea name="content" required [(ngModel)]="question.QuestionText" #content="ngModel" class="form-control">
-    </textarea>
-    <input type="submit" value="Ask" [disabled]="!questionForm.form.valid" class="btn btn-primary">
-</form>
-
-<hr>
-<div class="questions" *ngFor="let q of allQuestions; let idx = index">
-    <div class="question">
-        <span><b>{{q.askedByFirstName}} {{q.askedByLastName}} </b>({{q.createdAt | date: 'MM/dd/yyyy HH:mm a'}}) asked:</span>
-        <p>{{q.questionText}}</p>
-    </div>
-</div>
+<router-outlet></router-outlet>
