--- a/ClientApp/app/components/search/ask/ask.component.html
+++ b/ClientApp/app/components/search/ask/ask.component.html
@@ -1,5 +1,12 @@
 <h1>Ask a Question</h1>
 
+<angular2-multiselect [data]="tagList" [(ngModel)]="selectedTags" [settings]="dropdownSettings">
+    <c-item>
+        <ng-template let-item="item">
+            <label style="color: #333;min-width: 150px;">{{item.name}}</label>
+        </ng-template>
+    </c-item>    
+</angular2-multiselect>
 <form (submit)="addQuestion()" #questionForm="ngForm">
     <textarea name="content" required [(ngModel)]="question.QuestionText" #content="ngModel" class="form-control">
     </textarea>
