started adding categories for tags

--- a/ClientApp/app/components/home/home.component.html
+++ b/ClientApp/app/components/home/home.component.html
@@ -2,7 +2,7 @@
 <form (submit)="register()" #regForm="ngForm">
     
     <div class="row">
-        <div class="col-sm-4"><label>First Name:</label></div>
+        <label class="col-sm-4">First Name:</label>
         <div class="col-sm-7">
           <input type="text" name="firstName" required [(ngModel)]="user.FirstName" #firstName="ngModel" class="form-control">
         </div>
@@ -13,7 +13,7 @@
     <br>
     
     <div class="row">
-        <div class="col-sm-4"><label>Last Name:</label></div>
+        <label class="col-sm-4">Last Name:</label>
         <div class="col-sm-7">
           <input type="text" name="lastName" required [(ngModel)]="user.LastName" #lastName="ngModel" class="form-control">
         </div>
@@ -24,7 +24,7 @@
     <br>
     
     <div class="row">
-        <div class="col-sm-4"><label>Email Address:</label></div>
+        <label class="col-sm-4">Email Address:</label>
         <div class="col-sm-7">
           <input type="email" name="email" required [(ngModel)]="user.Email" #email="ngModel" class="form-control">
         </div>
@@ -34,8 +34,21 @@
     
     <br>
     
+    <div class="form-group row">
+        <label class="col-sm-4 col-form-label">Location:</label>
+        <div class="col-sm-7">
+            <select id="select" class="form-control">
+                <option *ngFor = "let l of location"
+                    [value] = "l"> {{l}} 
+                </option>
+            </select>
+        </div>
+    </div>
+
+    <br>
+
     <div class="row">
-        <div class="col-sm-4"><label>Password:</label></div>
+        <label class="col-sm-4 col-form-label">Password:</label>
         <div class="col-sm-7">
             <!-- add regex pattern validation -->
             <!-- default Identity validations: at least 6 characters, one non-alphanumeric, one lowercase, one uppercase -->
@@ -48,7 +61,7 @@
     <br>
 
     <div class="row">
-        <div class="col-sm-4"><label>Confirm Password:</label></div>
+        <label class="col-sm-4">Confirm Password:</label>
         <div class="col-sm-7">
           <input type="password" name="cpw" required [(ngModel)]="user.confirmPassword" #cpw="ngModel" class="form-control" validateEqual="password" reverse="false">
         </div>
@@ -68,7 +81,7 @@
 <form (submit)="userlogin()" #loginForm="ngForm">
     
     <div class="row">
-        <div class="col-sm-4"><label>Email Address:</label></div>
+        <label class="col-sm-4">Email Address:</label>
         <div class="col-sm-7">
           <input type="email" name="lemail" required [(ngModel)]="login.Email" #lemail="ngModel" class="form-control">
         </div>
@@ -79,7 +92,7 @@
     <br>
     
     <div class="row">
-        <div class="col-sm-4"><label>Password:</label></div>
+        <label class="col-sm-4">Password:</label>
         <div class="col-sm-7">
             <!-- add regex pattern validation -->
             <!-- default Identity validations: at least 6 characters, one non-alphanumeric, one lowercase, one uppercase -->
