--- a/ClientApp/app/components/search/questions/questions.component.html
+++ b/ClientApp/app/components/search/questions/questions.component.html
@@ -1,8 +1,8 @@
 <h1>Questions</h1>
 <div class="questions" *ngFor="let q of allQuestions; let idx = index">
     <div class="question">
-        <span><b>{{q.askedByFirstName}} {{q.askedByLastName}} </b>({{q.createdAt | date: 'MM/dd/yyyy HH:mm a'}}) asked:</span>
-        <p>{{q.questionText | truncate : 150}}</p>
+        <span><b>{{q.askedByFirstName}} {{q.askedByLastName}} </b>({{q.createdAt | date: 'dd MMM yyyy HH:mm a'}}) asked:</span>
+        <p>{{q.questionText | truncate : 125}}</p>
         <button class="btn btn-success" (click)="answerQuestion(q.questionId)">Answer</button>
     </div>
 </div>
