--- a/ClientApp/app/components/search/showquestion/show.component.html
+++ b/ClientApp/app/components/search/showquestion/show.component.html
@@ -1,12 +1,32 @@
-<p></p>
-<h5>{{question.questionText}}</h5>
-<p>{{question.askedByFirstName}}</p>
+<link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
+
+<div class="row question">
+    <h1 class="col-sm-1 letter">Q</h1>
+    <div class="col-sm-10">
+        <p>{{question.questionText}}</p>
+            <p>
+                <label class="tag">TAGS: </label>
+                <label class="tag tag-box" *ngFor="let t of question.tags">{{t.name}}</label>
+            </p>
+            <div class="row">
+                <button class="btn btn-primary glyphicon glyphicon-thumbs-up" (click)="voteForQuestion(question.questionId)"> {{question.votes}}</button>
+                <p class="user-info">asked by {{question.askedByFirstName}} {{question.askedByLastName}} ({{question.createdAt | date: 'dd MMM yyyy HH:mm a'}})</p>
+            </div>
+    </div>
+</div>
+
+<h1 class="col-sm-1 letter">A</h1>
+<div class="col-sm-11">
+    <div class="row" *ngFor="let a of question.answers">
+        <p>{{a.answerText}}</p>
+        <p class="user-info"><a href="/users/{{a.answeredById}}">{{a.answeredByName}}</a> ({{a.answeredDate | date: 'dd MMM yyyy HH:mm a'}})</p>
+        <button class="btn btn-success glyphicon glyphicon-thumbs-up" (click)="voteForAnswer(a.answerId)"> {{a.votes}}</button>
+    </div>
+
+</div>
 
 <hr>
-<h4>Answers</h4>
-<p *ngFor="let a of question.answers"><a href="/users/{{a.answeredById">{{a.answeredByName}}</a> said: {{a.answerText}}</p>
 
-<hr>
 <h3>Add Your Answer</h3>
 <form (submit)="submitAnswer()" #answerForm="ngForm">
     <textarea name="content" required [(ngModel)]="newAnswer.answerText" #content="ngModel" class="form-control">
