can edit questions and answers

--- a/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/ClientApp/app/components/navmenu/navmenu.component.html
@@ -17,22 +17,22 @@
                         <span class='glyphicon glyphicon-home'></span> Home
                     </a>
                 </li>
-                <li [routerLinkActive]="['link-active']">
+                <li [routerLinkActive]="['link-active']" *ngIf="loggedIn">
                     <a [routerLink]="['/profile']">
                         <span class='glyphicon glyphicon-user'></span> Profile
                     </a>
                 </li>
-                <li [routerLinkActive]="['link-active']">
+                <li [routerLinkActive]="['link-active']" *ngIf="loggedIn">
                     <a [routerLink]="['/search/questions']">
                         <span class='glyphicon glyphicon-search'></span> Search
                     </a>
                 </li>
-                <li [routerLinkActive]="['link-active']">
+                <li [routerLinkActive]="['link-active']" *ngIf="loggedIn">
                     <a [routerLink]="['/fetch-data']">
                         <span class='glyphicon glyphicon-pencil'></span> Answer
                     </a>
                 </li>
-                <li [routerLinkActive]="['link-active']">
+                <li [routerLinkActive]="['link-active']" *ngIf="loggedIn">
                     <a [routerLink]="['/logout']">
                         <span class='glyphicon glyphicon-remove'></span> Logout
                     </a>
