--- a/ClientApp/app/components/search/questions/questions.component.html
+++ b/ClientApp/app/components/search/questions/questions.component.html
@@ -3,7 +3,7 @@
 <p><input type="text" placeholder="search..." class="form-control" [(ngModel)]="searchStr"></p>
 <input type="hidden" [(ngModel)]="searchTags" [value]="searchTags">
 <!-- advanced filters: select tags -->
-<div class="panel-group" id="accordion">
+<!-- <div class="panel-group" id="accordion">
     <div class="panel panel-default">
         <div class="panel-heading">
             <h4 class="panel-title">
@@ -19,7 +19,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 <p></p>
 <p></p>
@@ -41,7 +41,7 @@
             <p><a (click)="answerQuestion(q.questionId)">{{q.questionTitle}}</a></p>
             <p>{{q.questionText | truncate : 125}}</p>
             <p><label class="tag">TAGS: </label>
-                <label class="tag tag-box" *ngFor="let t of q.tags">{{t.name}}</label>
+                <label class="tag tag-box" *ngFor="let t of q.tagsString">{{t}}</label>
             </p>
         </div>
     </div>
