--- a/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/ClientApp/app/components/navmenu/navmenu.component.html
@@ -28,8 +28,8 @@
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']" *ngIf="loggedIn">
-                    <a [routerLink]="['/fetch-data']">
-                        <span class='glyphicon glyphicon-pencil'></span> Answer
+                    <a [routerLink]="['/leaderboard']">
+                        <span class='glyphicon glyphicon-tasks'></span> Compete
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']" *ngIf="loggedIn">
