minor front-end adjustments

--- a/ClientApp/app/components/leaderboard/leaderboard.component.css
+++ b/ClientApp/app/components/leaderboard/leaderboard.component.css
@@ -7,6 +7,6 @@
 }
 
 .headerrow {
-    font-family: "Berkshire Swash";
+    font-family: "Bree Serif";
     background-color: rgb(152, 231, 212);
 }
