--- a/ClientApp/app/components/search/ask/ask.component.css
+++ b/ClientApp/app/components/search/ask/ask.component.css
@@ -1,11 +1,14 @@
-.tag {
-    display: inline-block;
-    margin: 1%;
-    padding: 5px;
-    /* border: 1px solid black; */
-    border-radius: 5px;
-}
-
 .rederror { 
     color: red;
+}
+
+textarea {
+    margin-top: 10px;
+    margin-bottom: 40px;
+}
+
+.taglist {
+    font-size: 80%;
+    margin: 0;
+    padding: 0;
 }
