--- a/ClientApp/app/components/search/ask/ask.component.html
+++ b/ClientApp/app/components/search/ask/ask.component.html
@@ -2,21 +2,15 @@
 <p class="rederror">{{error}}</p>
 <form (submit)="addQuestion()" #questionForm="ngForm">
     <p><input name="title" required [(ngModel)]="question.QuestionTitle" #title="ngModel" class="form-control" placeholder="Title" minlength="10" maxlength="60"></p>
-    <textarea name="content" required [(ngModel)]="question.QuestionText" #content="ngModel" class="form-control">
+    <textarea name="content" placeholder="type your full question here..." required [(ngModel)]="question.QuestionText" #content="ngModel" class="form-control">
     </textarea>
     
-    <!-- <div class="col-sm-3">
-    <select name="allTags" class="form-control col-sm-4" (change)="addTag($event.target.value)">
-        <option value="">---select tag---</option>
-        <option *ngFor="let c of tagList" value="">{{c.categoryName}}</option>
-        <option *ngFor="let t of tagList; let i = index" value={{i}}>{{t.name}}</option>
-    </select>
-    </div> -->
-    
-    <div class="col-sm-8">
-        <label class="tag" *ngFor="let oneTag of question.Tags; let idx = index">{{oneTag.name}}<span class="close" aria-label="Close" (click)="removeTag(idx)"><span aria-hidden="true">&times;</span></span></label>
+    <p>Select Tags:</p>
+    <div class="col-sm-3" *ngFor="let c of tagList">
+        <p><i>{{c.categoryName}}</i></p>
+        <p *ngFor="let t of c.tags" class="taglist"><input type="checkbox" (change)="addTag($event.target.value)" value={{t.tagId}}>{{t.tagName}}</p>
     </div>
-    
+   
     <br>
     
     <div class="col-sm-12">
